--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 </div>
                 <div class="about__content">
                     <h3 class="about__title">ABOUT ME</h3>
-                    <h2 class="about__bigtitle">WHO AM I</h2>
+                    <h2 class="about__bigtitle"><span>W</span><span>H</span><span>O </span><span>A</span><span>M </span><span>I</span></h2>
                     <div class="about__text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat est consequat eu. Quisque aliquet a ipsum nec tincidunt. Nulla vitae rhoncus leo.</p>
                         <p>Praesent dui sapien, bibendum quis tempus dictum, auctor ac dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at mauris porta, ullamcorper sem quis, lobortis sem. Donec sit amet aliquet dui, at varius est. Phasellus porttitor finibus neque vel vehicula. Duis in nulla egestas, dignissim elit at, imperdiet eros. Integer tristique posuere purus.</p>
@@ -386,7 +386,9 @@
                 </div> <!-- /about__content -->
             </div> <!-- /about__inner -->
         </div> <!-- /container -->
-    </section>
+    </section> <!--/about-->
+
+    
 
 </body>
 </html>
