--- a/index.html
+++ b/index.html
@@ -388,6 +388,44 @@
         </div> <!-- /container -->
     </section> <!--/about-->
 
+<!-- News -->
+    <section class="news">
+        <div class="container">
+            <div class="news__header">
+                <h3 class="news__title">Read me</h3>
+                <div class="news__text">Sometimes i write something smart</div>
+            </div>
+            <section class="news__items">
+                <div class="news__item">
+                    <div class="news__content-main">
+                        <div class="news__content">
+                            <div class="news__content-text"><span>3</span> <br> <span>J</span><span>a</span><span>n</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
+                        </div>
+                    </div>
+                    <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                </div>
+                <div class="news__item">
+                    <div class="news__content-main">
+                        <div class="news__content">
+                            <div class="news__content-text"><span>1</span><span>5</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
+                        </div>
+                    </div>
+                    <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                </div>
+                <div class="news__item">
+                    <div class="news__content-main">
+                        <div class="news__content">
+                            <div class="news__content-text"><span>2</span><span>3</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
+                        </div>
+                    </div>
+                    <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                </div>
+                <h5 class="item__title"></h5>
+                <div class="item__category"></div>
+                <div class="item__text"></div>
+            </section>
+        </div> <!-- /container -->
+    </section> <!-- /news -->
     
 
 </body>
