--- a/index.html
+++ b/index.html
@@ -397,35 +397,123 @@
             </div>
             <section class="news__items">
                 <div class="news__item">
+                    <div class="news__shadow">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>3</span> <br> <span>J</span><span>a</span><span>n</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
                     <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                    <h5 class="news__item-title">TEN THE BEST APP IN 2017</h5>
+                    <div class="news__item-category">CATEGORY</div>
+                    <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
+                    <div class="news__button">
+                    <a class="news__btn" href="#">READ MORE</a>
+                </div>
+                </div>
                 </div>
                 <div class="news__item">
+                    <div class="news__shadow">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>1</span><span>5</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
                     <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                    <h5 class="news__item-title">WEBSITE INSPIRATION</h5>
+                    <div class="news__item-category">CATEGORY</div>
+                    <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
+                    <div class="news__button">
+                    <a class="news__btn" href="#">READ MORE</a>
+                </div>
+                </div>
                 </div>
                 <div class="news__item">
+                    <div class="news__shadow">
                     <div class="news__content-main">
                         <div class="news__content">
                             <div class="news__content-text"><span>2</span><span>3</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
                     <img src="https://placehold.it/370x300" alt="" class="news__photo">
+                    <h5 class="news__item-title">CHANGES IN SOCIAL MEDIA</h5>
+                    <div class="news__item-category">CATEGORY</div>
+                    <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
+                    <div class="news__button">
+                    <a class="news__btn" href="#">READ MORE</a>
                 </div>
-                <h5 class="item__title"></h5>
-                <div class="item__category"></div>
-                <div class="item__text"></div>
+                </div>
+                </div>
+                <div class="news__button__arrow">
+                <div class="work__button">
+                    <a class="btn-works" href="#">
+                        <svg class="work__item work__item--up">
+                            <use class="work__icon" xlink:href="#arrow"></use>
+                        </svg>
+                        <svg class="work__item work__item--down">
+                            <use class="work__icon" xlink:href="#arrow"></use>
+                        </svg>
+                    </a>
+                    </div>
+                </div>
             </section>
         </div> <!-- /container -->
     </section> <!-- /news -->
+
+    <footer class="footer">
+        <div class="container">
+        <div class="footer__inner">
+            <div class="footer__left">
+            <div class="footer__date-site">© 2021 UI43 - Free Templates</div>
+            <div class="footer__nav">
+                <a href="#" class="footer__link__icon footer__link__icon--one">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#behance"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--two">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#dribbble"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--three">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#linkedin"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--four">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#facebook"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--five">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#instagram"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--six">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#twitter"></use>
+                    </svg>
+                </a>
+                <a href="#" class="footer__link__icon footer__link__icon--seven">
+                    <svg class="footer__item">
+                        <use class="footer__icon" xlink:href="#github"></use>
+                    </svg>
+                </a>
+            </div>
+        </div>
+            <nav class="footer__back-nav">
+                <a class="footer__back__links" href="#">Work</a>
+                <a class="footer__back__links" href="#">About Me</a>
+                <a class="footer__back__links" href="#">Blog</a>
+                <a class="footer__back__links" href="#">Contact</a>
+                <a class="footer__back__links footer__last__link" href="#">Hire Me</a>
+            </nav>  
+        
+        </div>
+    </div>
+    </footer>
     
 
 </body>
