A small fix footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body class="no-scroll">
+<body>
 
 <!-- SVG -->
 <svg style="display: none;">             <!--Заносим все под одну svg-->
@@ -844,7 +844,7 @@
     </div> <!--/modal-->
 
 
-    <div class="modal">
+    <div class="modal" style="display: none;">
         <div class="modal__dialog">
             <button type="button" class="modal__close content__index">
                 <div class="modal__pleace-img">
