--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 
                 <div class="burger">
                     <div class="nav__burger"></div>
-                        <div class="nav__burger nav__burger__back"></div>
+                    <div class="nav__burger nav__burger__back"></div>
                 </div>
 
                 
@@ -313,7 +313,7 @@
         <div class="container">
             <div class="intro__inner">    <!--Флэксовый контейнер-->
                 <div class="intro__content">
-                    <h2 class="intro__subtittle">Hello, I’m</h2>
+                    <h2 class="intro__subtitle">Hello, I’m</h2>
                     <h1 class="intro__tittle">Ivan Svilohuzov</h1>
                     <div class="intro__text">Beginner Front-end Developer</div>
                     <div class="social">
@@ -591,7 +591,7 @@
         <div class="container">
         <div class="footer__inner">
             <div class="footer__left">
-            <div class="footer__date-site">© 2021 UI43 - Free Templates</div>
+            <div class="footer__date-site">© 2021 Ivan Svilohuzov</div>
             <div class="footer__nav">
                 <a href="https://www.behance.net/svilohuzov3da0" class="footer__link__icon footer__link__icon--one">
                     <svg class="footer__item">
