adaptation modals + modern burger

--- a/index.html
+++ b/index.html
@@ -285,7 +285,12 @@
                 
                 <div class="burger">
                     <div class="nav__burger"></div>
-                    <div class="nav__burger nav__burger__back"></div>
+                </div>
+
+                <div class="nav__burger nav__burger__back">
+                    <svg class="burger__item">
+                        <use class="burger__icon" xlink:href="#close"></use>
+                    </svg>
                 </div>
 
                 
@@ -528,7 +533,9 @@
                             <div class="news__content-text"><span>3</span> <br> <span>J</span><span>a</span><span>n</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
+                    <div class="news__img">
                     <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                    </div>
                     <h5 class="news__item-title">TEN THE BEST APP IN 2017</h5>
                     <div class="news__item-category">CATEGORY</div>
                     <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
@@ -544,7 +551,9 @@
                             <div class="news__content-text"><span>1</span><span>5</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
+                    <div class="news__img">
                     <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                     </div>
                     <h5 class="news__item-title">WEBSITE INSPIRATION</h5>
                     <div class="news__item-category">CATEGORY</div>
                     <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
@@ -560,7 +569,9 @@
                             <div class="news__content-text"><span>2</span><span>3</span> <br> <span>F</span><span>e</span><span>b</span><span>r</span><span>u</span><span>a</span><span>r</span><span>y</span></div>
                         </div>
                     </div>
+                    <div class="news__img">
                     <img src="https://via.placeholder.com/370x330" alt="" class="news__photo">
+                     </div>
                     <h5 class="news__item-title">CHANGES IN SOCIAL MEDIA</h5>
                     <div class="news__item-category">CATEGORY</div>
                     <div class="news__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque eu enim eget luctus. Sed augue felis, facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat.</div>
