Adaptation modals, footer. Prettier formatter
Adaptation modals, intro, up-arrow, footer. Prettier formatter.

--- a/index.html
+++ b/index.html
@@ -761,23 +761,23 @@
             </div>
 
             <section class="modal__resume__inner">
-                <div class="modal__resume__experience">
+                <div class="modal__resume__experience modal__resume-padding">
                     <h4 class="modal__inner__title">Experience</h4>
                             <div class="modal__inner__item">
                             <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
                         <h5 class="modal__inner__work">Front-End</h5>
                     <div class="modal__inner__post">Mentor</div>
                     <div class="modal__inner__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper. Pellentesque cursus lectus a pulvinar dapibus. Nullam blandit aliquam ligula ut condimentum
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
                     </div>
                 </div>
 
-                <div class="modal__inner__item">
+                <div class="modal__inner__item modal__inner__item-none">
                     <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
                 <h5 class="modal__inner__work">Front-End</h5>
             <div class="modal__inner__post">Mentor</div>
             <div class="modal__inner__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper. Pellentesque cursus lectus a pulvinar dapibus. Nullam blandit aliquam ligula ut condimentum
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
             </div>
         </div>
 
@@ -786,28 +786,28 @@
         <h5 class="modal__inner__work">Front-End</h5>
     <div class="modal__inner__post">Mentor</div>
     <div class="modal__inner__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper. Pellentesque cursus lectus a pulvinar dapibus. Nullam blandit aliquam ligula ut condimentum
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
     </div>
 </div>
                 </div>
 
     
-                <div class="modal__resume__education">
+                <div class="modal__resume__education modal__resume-padding">
                     <h4 class="modal__inner__title">Education</h4>
                     <div class="modal__inner__item">
                         <div class="modal__inner__subtitle" datetime="02-20-2020">2005 - 2010</div>
                     <h5 class="modal__inner__work">UI/UX Design</h5>
                 <div class="modal__inner__post">LA University, USA</div>
                 <div class="modal__inner__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper. Pellentesque cursus lectus a pulvinar dapibus. Nullam blandit aliquam ligula ut condimentum
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
                 </div>
             </div>
-            <div class="modal__inner__item">
+            <div class="modal__inner__item modal__inner__item-none">
                 <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
             <h5 class="modal__inner__work">Front-End</h5>
         <div class="modal__inner__post">Mentor</div>
         <div class="modal__inner__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper. Pellentesque cursus lectus a pulvinar dapibus. Nullam blandit aliquam ligula ut condimentum
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam lobortis felis non tempor ullamcorper.
         </div>
     </div>
 
