Final flex modals. Modal resume, and Contact resume.

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
         </div> <!--/modal__dialog-->
     </div> <!--/modal-->
 
-    <div class="modal" style="display: none;" data-modal="resume">  <!-- В этом блоке будет храниться маска, фон -->
+    <div class="modal modal__resume-padding" style="display: none;" data-modal="resume">  <!-- В этом блоке будет храниться маска, фон -->
         <div class="modal__dialog"> <!-- Здесь будет содержмое модального окна -->
             <button type="button" class="modal__close" data-exit="close">
                 <div class="modal__pleace-img">
@@ -822,10 +822,10 @@
             <section class="modal__resume__inner">
                 <div class="modal__resume__experience modal__resume-padding">
                     <div class="modal__inner-links">
-                    <a class="modal__inner__expirience-link" href="#">Expirience</a>
-                    <a class="modal__inner__education-link" href="#">Education</a>
+                        <h4 class="modal__inner__title modal__inner__title-background">Education</h4>
+                        <h4 class="modal__inner__title modal__inner__title-background">Experience</h4>
                 </div>
-                    <h4 class="modal__inner__title">Experience</h4>
+                    <h4 class="modal__inner__title modal__inner__title-hide">Experience</h4>
                             <div class="modal__inner__item">
                             <div class="modal__inner__subtitle" datetime="02-20-2020">2019 - 2020</div>
                         <h5 class="modal__inner__work">Front-End</h5>
